action on next branch

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -3,14 +3,10 @@ name: Build & Test
 on:
   push:
     branches:
-      - release
-      - major
-      - minor
+      - next
   pull_request:
     branches:
-      - release
-      - major
-      - minor
+      - next
 env:
   CI: true
   node: 14.x
