--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -7,10 +7,10 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [master]
+    branches: [dev]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [master]
+    branches: [dev]
   schedule:
     - cron: '0 5 * * 3'
 
