action on next branch

--- a/.github/workflows/publish_and_install.yml
+++ b/.github/workflows/publish_and_install.yml
@@ -2,14 +2,10 @@ name: Publish & Install
 on:
   push:
     branches:
-      - release
-      - major
-      - minor
+      - main
   pull_request:
     branches:
-      - release
-      - major
-      - minor
+      - main
 defaults:
   run:
     shell: bash
