feat(job-queue-plugin): Create BullMQJobQueuePlugin
This introduces a new plugin which implements a job queue based on Redis/BullMQ

--- a/packages/job-queue-plugin/package.json
+++ b/packages/job-queue-plugin/package.json
@@ -2,27 +2,29 @@
   "name": "@vendure/job-queue-plugin",
   "version": "1.1.3",
   "license": "MIT",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "package/index.js",
+  "types": "package/index.d.ts",
   "files": [
-    "lib/**/*"
+    "package/**/*"
   ],
-  "private": true,
+  "private": false,
   "scripts": {
     "watch": "tsc -p ./tsconfig.build.json --watch",
-    "build": "rimraf lib && tsc -p ./tsconfig.build.json && yarn ts-node build.ts",
+    "build": "rimraf package && tsc -p ./tsconfig.build.json",
     "lint": "tslint --fix --project ./",
     "test": "jest --config ./jest.config.js",
+    "e2e-wip": "node e2e/check-connection.js || jest --config ../../e2e-common/jest-config.js --runInBand --package=job-queue-plugin",
     "ci": "yarn build"
   },
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   },
   "devDependencies": {
     "@google-cloud/pubsub": "^2.8.0",
     "@types/redis": "^2.8.28",
     "@vendure/common": "^1.1.3",
     "@vendure/core": "^1.1.3",
+    "bullmq": "^1.40.1",
     "redis": "^3.0.2",
     "rimraf": "^3.0.2",
     "typescript": "4.1.5"
