--- a/packages/email-plugin/package.json
+++ b/packages/email-plugin/package.json
@@ -15,6 +15,8 @@
     "lint": "tslint --fix --project ./",
     "test": "jest --config ./jest.config.js"
   },
+  "homepage": "https://www.vendure.io/",
+  "funding": "https://github.com/sponsors/michaelbromley",
   "publishConfig": {
     "access": "public"
   },
