--- a/packages/ui-devkit/package.json
+++ b/packages/ui-devkit/package.json
@@ -15,6 +15,8 @@
     "compiler",
     "scaffold"
   ],
+  "homepage": "https://www.vendure.io/",
+  "funding": "https://github.com/sponsors/michaelbromley",
   "publishConfig": {
     "access": "public"
   },
