--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vendure/common",
-  "version": "1.2.3",
+  "version": "1.3.0-beta.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
