--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "publish-local": "lerna version --no-git-tag-version && cd scripts && ./publish-to-verdaccio.sh"
   },
   "devDependencies": {
-    "@commitlint/cli": "12.1.4",
-    "@commitlint/config-conventional": "12.1.4",
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "@graphql-codegen/add": "2.0.2",
-    "@graphql-codegen/cli": "1.21.6",
+    "@graphql-codegen/cli": "1.21.1",
     "@graphql-codegen/fragment-matcher": "2.0.1",
     "@graphql-codegen/typescript": "1.21.0",
     "@graphql-codegen/typescript-compatibility": "2.0.1",
@@ -59,7 +59,7 @@
     "typescript": "4.3.5"
   },
   "resolutions": {
-    "npm-packlist": "2.2.2"
+    "npm-packlist": "1.1.12"
   },
   "workspaces": {
     "packages": [
