--- a/packages/admin-ui/package.json
+++ b/packages/admin-ui/package.json
@@ -47,21 +47,21 @@
     "dayjs": "^1.10.4",
     "graphql": "15.5.1",
     "messageformat": "2.3.0",
-    "ngx-pagination": "5.1.1",
-    "ngx-translate-messageformat-compiler": "4.10.0",
-    "prosemirror-commands": "1.1.10",
-    "prosemirror-dropcursor": "1.3.5",
-    "prosemirror-gapcursor": "1.1.5",
-    "prosemirror-history": "1.1.3",
-    "prosemirror-inputrules": "1.1.3",
-    "prosemirror-keymap": "1.1.4",
-    "prosemirror-menu": "1.1.4",
-    "prosemirror-schema-basic": "1.1.2",
-    "prosemirror-schema-list": "1.1.5",
-    "prosemirror-state": "1.3.4",
-    "rxjs": "7.2.0",
-    "tslib": "2.3.0",
-    "zone.js": "0.11.4"
+    "ngx-pagination": "^5.0.0",
+    "ngx-translate-messageformat-compiler": "^4.8.0",
+    "prosemirror-commands": "^1.1.7",
+    "prosemirror-dropcursor": "^1.3.3",
+    "prosemirror-gapcursor": "^1.1.5",
+    "prosemirror-history": "^1.1.3",
+    "prosemirror-inputrules": "^1.1.3",
+    "prosemirror-keymap": "^1.1.4",
+    "prosemirror-menu": "^1.1.4",
+    "prosemirror-schema-basic": "^1.1.2",
+    "prosemirror-schema-list": "^1.1.4",
+    "prosemirror-state": "^1.3.4",
+    "rxjs": "^6.6.6",
+    "tslib": "^2.1.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.2",
