--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "check-angular-versions": "ts-node scripts/check-angular-versions.ts",
     "generate-changelog": "ts-node scripts/changelogs/generate-changelog.ts",
     "publish-release": "lerna publish -m \"chore: Publish %s\" --no-push --force-publish",
-    "publish-prerelease": "lerna publish -m \"chore: Pre-release %s\" preminor --no-push --force-publish --preid beta --dist-tag next --registry=http://localhost:4873",
+    "publish-prerelease": "lerna publish -m \"chore: Pre-release %s\" prerelease --no-push --force-publish --preid beta --dist-tag next",
     "publish-local": "lerna version --no-git-tag-version && cd scripts && ./publish-to-verdaccio.sh"
   },
   "devDependencies": {
