--- a/packages/payment-plugin/package.json
+++ b/packages/payment-plugin/package.json
@@ -1,30 +1,38 @@
 {
-  "name": "@vendure/payments-plugin",
-  "version": "1.3.2",
-  "license": "MIT",
-  "main": "package/index.js",
-  "types": "package/index.d.ts",
-  "files": [
-    "package/**/*"
-  ],
-  "private": false,
-  "scripts": {
-    "watch": "tsc -p ./tsconfig.build.json --watch",
-    "build": "rimraf package && tsc -p ./tsconfig.build.json",
-    "lint": "tslint --fix --project ./",
-    "ci": "yarn build"
-  },
-  "homepage": "https://www.vendure.io/",
-  "funding": "https://github.com/sponsors/michaelbromley",
-  "publishConfig": {
-    "access": "public"
-  },
-  "devDependencies": {
-    "@types/braintree": "^2.22.15",
-    "@vendure/common": "^1.3.2",
-    "@vendure/core": "^1.3.2",
-    "braintree": "^3.0.0",
-    "rimraf": "^3.0.2",
-    "typescript": "4.3.5"
-  }
+    "name": "@vendure/payments-plugin",
+    "version": "1.3.2",
+    "license": "MIT",
+    "main": "package/index.js",
+    "types": "package/index.d.ts",
+    "files": [
+        "package/**/*"
+    ],
+    "private": false,
+    "scripts": {
+        "watch": "tsc -p ./tsconfig.build.json --watch",
+        "build": "rimraf package && tsc -p ./tsconfig.build.json",
+        "e2e": "jest --config ../../e2e-common/jest-config.js --runInBand --package=payment-plugin",
+        "lint": "tslint --fix --project ./",
+        "ci": "yarn build"
+    },
+    "homepage": "https://www.vendure.io/",
+    "funding": "https://github.com/sponsors/michaelbromley",
+    "publishConfig": {
+        "access": "public"
+    },
+    "peerDependencies": {
+        "@mollie/api-client": "3.x",
+        "braintree": "3.x"
+    },
+    "devDependencies": {
+        "@types/braintree": "^2.22.15",
+        "@vendure/common": "^1.3.2",
+        "@vendure/core": "^1.3.2",
+        "@vendure/testing": "^1.3.2",
+        "braintree": "^3.0.0",
+        "@mollie/api-client": "^3.5.1",
+        "nock": "^13.1.4",
+        "rimraf": "^3.0.2",
+        "typescript": "4.3.5"
+    }
 }
