--- a/.github/workflows/publish_and_install.yml
+++ b/.github/workflows/publish_and_install.yml
@@ -5,6 +5,7 @@ on:
       - master
       - major
       - minor
+      - parallel-e2e
   pull_request:
     branches:
       - master
@@ -41,6 +42,16 @@ jobs:
     - name: Windows dependencies
       if: matrix.os == 'windows-latest'
       run: npm install -g @angular/cli
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+    - uses: actions/cache@v2
+      id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+      with:
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
     - name: Install & bootstrap
       run: |
         yarn config set unsafe-perm true
