--- a/packages/asset-server-plugin/package.json
+++ b/packages/asset-server-plugin/package.json
@@ -12,7 +12,7 @@
     "build": "rimraf lib && tsc -p ./tsconfig.build.json && node build.js",
     "lint": "tslint --fix --project ./",
     "test": "jest --config ./jest.config.js",
-    "e2e": "jest --config ../../e2e-common/jest-config.js --runInBand --package=asset-server-plugin"
+    "e2e": "jest --config ../../e2e-common/jest-config.js --package=asset-server-plugin"
   },
   "homepage": "https://www.vendure.io/",
   "funding": "https://github.com/sponsors/michaelbromley",
