--- a/packages/admin-ui/src/lib/static/vendure-ui-config.json
+++ b/packages/admin-ui/src/lib/static/vendure-ui-config.json
@@ -4,8 +4,8 @@
   "adminApiPath": "admin-api",
   "tokenMethod": "bearer",
   "authTokenHeaderKey": "vendure-auth-token",
-  "defaultLanguage": "en",
-  "availableLanguages": ["en", "es", "zh_Hant", "zh_Hans", "pl", "de", "pt_BR", "pt_PT", "cs", "fr", "ru", "uk", "it"],
+  "defaultLanguage": "mn",
+  "availableLanguages": ["en", "es", "mn", "zh_Hant", "zh_Hans", "pl", "de", "pt_BR", "pt_PT", "cs", "fr", "ru", "uk", "it"],
   "brand": "",
   "hideVendureBranding": false,
   "hideVersion": false
