--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,7 @@
 name: Build
 
 on:
-  push: 
-    branches: [next]
-  pull_request:
-    branches: [next]
+  create
 
 env:
   CI: true
@@ -14,9 +11,9 @@ jobs:
     name: build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v1
     - name: Use Node.js ${{ env.node }}
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v1
       with:
         node-version: ${{ env.node }}
     - name: Install & build
