--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "platform.sale",
-  "version": "0.1.12",
+  "name": "vendure-angular-storefront",
+  "version": "0.1.25",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 4201",
     "build": "ng build",
     "analyze-prod-bundle": "ng build --prod --statsJson=true && webpack-bundle-analyzer dist/browser/stats.json",
     "test": "ng test",
@@ -13,74 +13,72 @@
     "dev:ssr": "ng run reference-storefront:serve-ssr",
     "serve:ssr": "node dist/server/main.js",
     "build:ssr": "ng build --prod && ng run reference-storefront:server:production",
+    "build:ssr:docker": "ng build --configuration=production,docker && ng run reference-storefront:server:docker",
     "prerender": "ng run reference-storefront:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.13",
-    "@angular/cdk": "12.1.3",
-    "@angular/common": "9.1.13",
-    "@angular/compiler": "9.1.13",
-    "@angular/core": "9.1.13",
-    "@angular/forms": "9.1.13",
-    "@angular/platform-browser": "9.1.13",
-    "@angular/platform-browser-dynamic": "9.1.13",
-    "@angular/platform-server": "9.1.13",
-    "@angular/router": "9.1.13",
-    "@angular/service-worker": "9.1.13",
-    "@fortawesome/angular-fontawesome": "0.9.0",
-    "@fortawesome/fontawesome-svg-core": "1.2.35",
-    "@fortawesome/free-brands-svg-icons": "5.15.3",
-    "@fortawesome/free-solid-svg-icons": "5.15.3",
-    "@nguniversal/express-engine": "9.1.1",
-    "apollo-angular": "2.6.0",
-    "apollo-angular-link-http": "1.11.0",
-    "apollo-cache-inmemory": "1.6.6",
-    "apollo-client": "2.6.10",
-    "apollo-link": "1.2.14",
-    "bootstrap": "5.0.2",
-    "compression": "1.7.4",
-    "core-js": "3.15.2",
-    "express": "4.17.1",
-    "graphql": "15.5.1",
-    "graphql-tag": "2.12.5",
-    "photoswipe": "4.1.3",
-    "rxjs": "6.6.7",
-    "tslib": "2.3.0",
-    "zone.js": "0.11.4"
+    "@angular/animations": "^12.0.1",
+    "@angular/cdk": "^12.0.1",
+    "@angular/common": "^12.0.1",
+    "@angular/compiler": "^12.0.1",
+    "@angular/core": "^12.0.1",
+    "@angular/forms": "^12.0.1",
+    "@angular/platform-browser": "^12.0.1",
+    "@angular/platform-browser-dynamic": "^12.0.1",
+    "@angular/platform-server": "^12.0.1",
+    "@angular/router": "^12.0.1",
+    "@angular/service-worker": "^12.0.1",
+    "@apollo/client": "^3.3.19",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.31",
+    "@fortawesome/free-brands-svg-icons": "^5.15.0",
+    "@fortawesome/free-solid-svg-icons": "^5.15.0",
+    "@nguniversal/express-engine": "^12.0.0",
+    "apollo-angular": "^2.4.0",
+    "bootstrap": "^4.5.2",
+    "compression": "^1.7.4",
+    "core-js": "^3.6.5",
+    "express": "^4.15.2",
+    "graphql": "^15.5.0",
+    "photoswipe": "^4.1.3",
+    "rxjs": "~6.6.3",
+    "tslib": "^2.2.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.14",
-    "@angular-devkit/build-ng-packagr": "0.1002.0",
-    "@angular/cli": "9.1.15",
-    "@angular/compiler-cli": "9.1.13",
-    "@angular/language-service": "9.1.13",
-    "@nguniversal/builders": "9.1.1",
-    "@types/compression": "1.7.1",
-    "@types/express": "4.17.2",
-    "@types/graphql": "14.5.0",
-    "@types/jasmine": "3.8.1",
-    "@types/jasminewd2": "2.0.8",
-    "@types/node": "14.17.5",
-    "@types/photoswipe": "4.1.0",
-    "codelyzer": "6.0.2",
-    "graphql-code-generator": "0.18.0",
-    "graphql-codegen-add": "0.18.0",
-    "graphql-codegen-typescript-client": "0.18.0",
-    "graphql-codegen-typescript-common": "0.18.0",
-    "jasmine-core": "2.99.1",
-    "jasmine-spec-reporter": "7.0.0",
-    "karma": "3.0.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "1.7.0",
-    "ng-packagr": "9.1.5",
-    "ts-loader": "5.4.5",
-    "ts-node": "10.1.0",
-    "tslint": "5.20.1",
-    "typescript": "4.3.5",
-    "webpack-bundle-analyzer": "3.6.0",
-    "webpack-cli": "4.7.2"
+    "@angular-devkit/build-angular": "~12.0.1",
+    "@angular/cli": "^12.0.1",
+    "@angular/compiler-cli": "^12.0.1",
+    "@angular/language-service": "^12.0.1",
+    "@graphql-codegen/add": "^2.0.1",
+    "@graphql-codegen/cli": "^1.13.2",
+    "@graphql-codegen/fragment-matcher": "^1.17.8",
+    "@graphql-codegen/typescript": "^1.13.2",
+    "@graphql-codegen/typescript-compatibility": "^2.0.0",
+    "@graphql-codegen/typescript-operations": "^1.13.2",
+    "@nguniversal/builders": "^12.0.0",
+    "@types/compression": "^1.7.0",
+    "@types/express": "^4.17.8",
+    "@types/graphql": "^14.0.5",
+    "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "^15.3.1",
+    "@types/photoswipe": "^4.1.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.2",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^12.0.0",
+    "ts-loader": "^8.0.4",
+    "ts-node": "~9.0.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.2.4",
+    "webpack-bundle-analyzer": "^3.9.0",
+    "webpack-cli": "^3.3.12"
   }
 }
