--- a/src/tsconfig.server.json
+++ b/src/tsconfig.server.json
@@ -1,9 +1,10 @@
 {
   "extends": "./tsconfig.app.json",
   "compilerOptions": {
-    "module": "commonjs",
     "outDir": "../out-tsc/app-server",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "target": "es2016",
+    "skipLibCheck": true
   },
   "angularCompilerOptions": {
     "entryModule": "app/app.server.module#AppServerModule"
