--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.0",
     "@nguniversal/express-engine": "^12.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "apollo-angular": "^2.4.0",
     "bootstrap": "^4.5.2",
     "compression": "^1.7.4",
