--- a/packages/admin-ui-plugin/package.json
+++ b/packages/admin-ui-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vendure/admin-ui-plugin",
-  "version": "1.3.4",
+  "version": "1.4.0-beta.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -21,8 +21,8 @@
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/fs-extra": "^9.0.1",
-    "@vendure/common": "^1.3.4",
-    "@vendure/core": "^1.3.4",
+    "@vendure/common": "^1.4.0-beta.0",
+    "@vendure/core": "^1.4.0-beta.0",
     "express": "^4.17.1",
     "rimraf": "^3.0.2",
     "typescript": "4.3.5"
