--- a/packages/payments-plugin/package.json
+++ b/packages/payments-plugin/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@vendure/payments-plugin",
-    "version": "1.3.4",
+    "version": "1.4.0-beta.0",
     "license": "MIT",
     "main": "package/index.js",
     "types": "package/index.d.ts",
@@ -25,12 +25,12 @@
         "braintree": "3.x"
     },
     "devDependencies": {
-        "@types/braintree": "^2.22.15",
-        "@vendure/common": "^1.3.4",
-        "@vendure/core": "^1.3.4",
-        "@vendure/testing": "^1.3.4",
-        "braintree": "^3.0.0",
         "@mollie/api-client": "^3.5.1",
+        "@types/braintree": "^2.22.15",
+        "@vendure/common": "^1.4.0-beta.0",
+        "@vendure/core": "^1.4.0-beta.0",
+        "@vendure/testing": "^1.4.0-beta.0",
+        "braintree": "^3.0.0",
         "nock": "^13.1.4",
         "rimraf": "^3.0.2",
         "typescript": "4.3.5"
