--- a/packages/webhook-plugin/package.json
+++ b/packages/webhook-plugin/package.json
@@ -17,16 +17,17 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
-    "@vendure/admin-ui": "1.3.4",
-    "@vendure/admin-ui-plugin": "1.3.4",
-    "@vendure/core": "1.3.4",
-    "@vendure/testing": "1.3.4",
-    "@vendure/ui-devkit": "1.3.4",
+    "@vendure/admin-ui": "1.4.1",
+    "@vendure/admin-ui-plugin": "1.4.1",
+    "@vendure/core": "1.4.1",
+    "@vendure/common": "1.4.1",
+    "@vendure/testing": "1.4.1",
+    "@vendure/ui-devkit": "1.4.1",
     "copyfiles": "^2.4.1",
-    "jest": "^27.4.4",
+    "jest": "^27.4.5",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.1",
+    "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.3"
+    "typescript": "^4.5.4"
   }
 }
