--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "codegen": "tsc -p scripts/codegen/plugins && ts-node scripts/codegen/generate-graphql-types.ts",
     "version": "yarn check-imports && yarn check-angular-versions && yarn build && yarn check-core-type-defs && yarn generate-changelog && git add CHANGELOG* && git add */version.ts",
     "dev-server:start": "cd packages/dev-server && yarn start",
-    "front:start": "cd storefront yarn start",
+    "dev-server:populate": "cd packages/dev-server && yarn populate",
+    "job:start": "cd packages/job-queue-plugin && docker-compose up",
+    "front:start": "cd apps/storefront && yarn start",
     "test": "lerna run test --stream --no-bail",
     "e2e": "lerna run e2e --stream --no-bail",
     "build": "lerna run build",
