--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -38,7 +38,7 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "apollo-angular": "^2.6.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "4.6.1",
     "compression": "^1.7.4",
     "core-js": "^3.20.1",
     "express": "^4.17.2",
