chore: Removed ngx swiper wrapper

--- a/apps/template/package.json
+++ b/apps/template/package.json
@@ -31,8 +31,7 @@
     "masonry-layout": "^4.2.2",
     "ngx-masonry": "^10.0.6",
     "ngx-owl-carousel-o": "^4.0.0",
-    "ngx-swiper-wrapper": "^10.0.0",
-    "ngx-typed-js": "^2.0.2",
+    "ngx-typed-js": "2.0.2",
     "ngx-youtube-player": "^9.1.0",
     "rxjs": "~6.6.0",
     "swiper": "^6.3.3",
