chore: Added ngx-lightbox ngx-swiper-wrapper

--- a/apps/template/package.json
+++ b/apps/template/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.1.3",
     "@angular/platform-browser-dynamic": "~13.1.3",
     "@angular/router": "~13.1.3",
+    "@ckeditor/ckeditor5-angular": "^2.0.2",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
     "@vimeo/player": "^2.16.2",
@@ -29,8 +30,10 @@
     "bootstrap": "^5.1.3",
     "flatpickr": "^4.6.9",
     "masonry-layout": "^4.2.2",
+    "ngx-lightbox": "^2.5.2",
     "ngx-masonry": "^13.0.0",
     "ngx-owl-carousel-o": "^7.0.1",
+    "ngx-swiper-wrapper": "^10.0.0",
     "ngx-typed-js": "2.1.1",
     "ngx-youtube-player": "^12.0.1",
     "rxjs": "~7.5.2",
