--- a/apps/template/package.json
+++ b/apps/template/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.1.3",
     "@angular/router": "~13.1.3",
     "@ckeditor/ckeditor5-angular": "^2.0.2",
+    "@ckeditor/ckeditor5-build-classic": "^32.0.0",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
     "@vimeo/player": "^2.16.2",
