--- a/template/admin/package.json
+++ b/template/admin/package.json
@@ -11,12 +11,12 @@
   "scripts": {
     "clean": "yarn workspaces run rimraf \"{.next,node_modules,__generated__,.cache,src/graphql/*.d.ts,src/framework/graphql/**/*.d.ts}\" && rimraf node_modules",
     "gql-clean": "yarn workspaces run rimraf \"{__generated__,src/graphql/*.d.ts,src/framework/graphql/**/*.d.ts}\"",
-    "dev:rest": "yarn workspace @marvel/admin-rest dev",
-    "build:rest": "yarn workspace @marvel/admin-rest build",
-    "start:rest": "yarn workspace @marvel/admin-rest start",
-    "dev:gql": "yarn workspace @marvel/admin-graphql dev",
-    "build:gql": "yarn workspace @marvel/admin-graphql build",
-    "start:gql": "yarn workspace @marvel/admin-graphql start"
+    "dev:rest": "yarn workspace @intelligo/admin-rest dev",
+    "build:rest": "yarn workspace @intelligo/admin-rest build",
+    "start:rest": "yarn workspace @intelligo/admin-rest start",
+    "dev:gql": "yarn workspace @intelligo/admin-graphql dev",
+    "build:gql": "yarn workspace @intelligo/admin-graphql build",
+    "start:gql": "yarn workspace @intelligo/admin-graphql start"
   },
   "devDependencies": {
     "prettier": "^2.5.1",
