--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "pickbazar",
+  "name": "platform.sale",
   "version": "7.0.0",
   "license": "MIT",
   "private": true,
-  "author": "RedQ, Inc.",
+  "author": "Intelligo LLC",
   "workspaces": [
-    "admin/*",
-    "shop"
+    "dashboard",
+    "storefront"
   ],
   "scripts": {
     "clean": "yarn workspaces run rimraf \"{.next,node_modules,__generated__,.cache,src/graphql/*.d.ts,src/framework/graphql/**/*.d.ts}\" && rimraf node_modules",
     "gql-clean": "yarn workspaces run rimraf \"{__generated__,src/graphql/*.d.ts,src/framework/graphql/**/*.d.ts}\"",
-    "dev:shop-rest": "yarn workspace @pick-bazar/shop dev:rest",
-    "build:shop-rest": "yarn workspace @pick-bazar/shop build:rest",
-    "start:shop-rest": "yarn workspace @pick-bazar/shop start",
-    "dev:admin-rest": "concurrently --kill-others \"yarn workspace @marvel-mock/api-rest start:dev\" \"yarn workspace @marvel/admin-rest dev\"",
-    "build:admin-rest": "yarn workspace @marvel/admin-rest build",
-    "start:admin-rest": "yarn workspace @marvel/admin-rest start",
-    "dev:shop-gql": "yarn workspace @pick-bazar/shop dev:gql",
-    "build:shop-gql": "yarn workspace @pick-bazar/shop build:gql",
-    "start:shop-gql": "yarn workspace @pick-bazar/shop start",
-    "dev:admin-gql": "yarn workspace @marvel/admin-graphql dev",
-    "build:admin-gql": "yarn workspace @marvel/admin-graphql build",
-    "start:admin-gql": "yarn workspace @marvel/admin-graphql start"
+    "dev:web": "yarn workspace @intelligo/storefront dev:gql",
+    "build:web": "yarn workspace @intelligo/storefront build:gql",
+    "start:web": "yarn workspace @intelligo/storefront start",
+    "dev:dashboard": "yarn workspace @intelligo/dashboard dev",
+    "build:dashboard": "yarn workspace @intelligo/dashboard build",
+    "start:dashboard": "yarn workspace @intelligo/dashboard start"
   },
   "devDependencies": {
     "prettier": "^2.4.0",
