--- a/template/api/rest/package.json
+++ b/template/api/rest/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@marvel-mock/api-rest",
+  "name": "@intelligo-mock/api-rest",
   "version": "0.0.2",
   "description": "",
   "author": "",
