use attribute hook нэмсэн

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,8 +16,10 @@
     "@reach/portal": "^0.16.2",
     "@react-google-maps/api": "^2.7.0",
     "@react-pdf/renderer": "^2.0.21",
+    "amazon-cognito-identity-js": "^5.2.8",
     "apexcharts": "^3.31.0",
     "apollo-upload-client": "^16.0.0",
+    "aws-amplify": "^4.3.22",
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.1",
     "cookie": "^0.4.1",
