--- a/apps/dashboard/.env.template
+++ b/apps/dashboard/.env.template
@@ -1,5 +1,5 @@
 # Secrets like the one below should go into `.env.local` instead to avoid pushing
 # them to a repository.
-NEXT_PUBLIC_REST_API_ENDPOINT="https://api.mindbank.us/admin"
+NEXT_PUBLIC_REST_API_ENDPOINT="https://api.mindbank.us/backend"
 NEXT_PUBLIC_SHOP_URL="http://localhost:3003"
 NEXT_PUBLIC_GOOGLE_MAP_API_KEY=
