added vercel config

--- a/apps/dashboard/vercel.json
+++ b/apps/dashboard/vercel.json
@@ -1,13 +1,13 @@
 {
   "env": {
-    "NEXT_PUBLIC_REST_API_ENDPOINT": "Add your REST API Endpoints",
-    "NEXT_PUBLIC_SHOP_URL": "Your shop frontend URL",
+    "NEXT_PUBLIC_REST_API_ENDPOINT": "https://api.mindbank.us/backend",
+    "NEXT_PUBLIC_SHOP_URL": "https://mindbank.us",
     "NEXT_PUBLIC_GOOGLE_MAP_API_KEY": "Your Google Map Key"
   },
   "build": {
     "env": {
-      "NEXT_PUBLIC_REST_API_ENDPOINT": "Add your REST API Endpoints",
-      "NEXT_PUBLIC_SHOP_URL": "Your shop frontend URL",
+      "NEXT_PUBLIC_REST_API_ENDPOINT": "https://api.mindbank.us/backend",
+      "NEXT_PUBLIC_SHOP_URL": "https://mindbank.us",
       "NEXT_PUBLIC_GOOGLE_MAP_API_KEY": "Your Google Map Key"
     }
   }
