--- a/apps/storefront/vercel.json
+++ b/apps/storefront/vercel.json
@@ -1,23 +1,23 @@
 {
   "env": {
-    "NEXT_PUBLIC_REST_API_ENDPOINT": "Add your REST API",
+    "NEXT_PUBLIC_REST_API_ENDPOINT": "https://api.mindbank.us/backend",
     "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY": "Stripe Payment Key",
     "NEXT_PUBLIC_GOOGLE_MAP_API_KEY": "Google Map Key",
-    "NEXT_PUBLIC_SITE_URL": "Shop Frontend URL",
-    "NEXTAUTH_URL": "Shop Frontend URL",
-    "SECRET": "Random 32 Hash Key",
+    "NEXT_PUBLIC_SITE_URL": "https://mindbank.us",
+    "NEXTAUTH_URL": "https://mindbank.us",
+    "SECRET": "3e8a013b87a5b84376b1972795b14205",
     "GOOGLE_CLIENT_ID": "Google Client Key",
     "GOOGLE_CLIENT_SECRET": "Google Client Secret",
     "REVALIDATE_DURATION": 120
   },
   "build": {
     "env": {
-      "NEXT_PUBLIC_REST_API_ENDPOINT": "Add your REST API",
+      "NEXT_PUBLIC_REST_API_ENDPOINT": "https://api.mindbank.us/backend",
       "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY": "Stripe Payment Key",
       "NEXT_PUBLIC_GOOGLE_MAP_API_KEY": "Google Map Key",
-      "NEXT_PUBLIC_SITE_URL": "Shop Frontend URL",
-      "NEXTAUTH_URL": "Shop Frontend URL",
-      "SECRET": "Random 32 Hash Key",
+      "NEXT_PUBLIC_SITE_URL": "https://mindbank.us",
+      "NEXTAUTH_URL": "https://mindbank.us",
+      "SECRET": "3e8a013b87a5b84376b1972795b14205",
       "GOOGLE_CLIENT_ID": "Google Client Key",
       "GOOGLE_CLIENT_SECRET": "Google Client Secret",
       "REVALIDATE_DURATION": 120
