--- a/apps/storefront/.env.template
+++ b/apps/storefront/.env.template
@@ -1,5 +1,5 @@
 # REST API endpoint
-NEXT_PUBLIC_REST_API_ENDPOINT=https://api.mindbank.us/front
+NEXT_PUBLIC_REST_API_ENDPOINT=https://api.mindbank.us/backend
 
 # Shop site url to fetch banners and menus
 NEXT_PUBLIC_SITE_URL=http://localhost:3003
