--- a/apps/storefront/public/manifest.json
+++ b/apps/storefront/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ChawkBazar E-Commerce Template",
-  "short_name": "ChawkBazar",
+  "name": "Intelligo E-Commerce Template",
+  "short_name": "Intelligo",
   "theme_color": "#ffffff",
   "background_color": "#004740",
   "display": "fullscreen",
