--- a/libs/config/project.json
+++ b/libs/config/project.json
@@ -2,33 +2,22 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/config/src",
   "projectType": "library",
-  "tags": [],
   "targets": {
     "build": {
-      "executor": "@nrwl/web:rollup",
+      "executor": "@nrwl/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/libs/config",
+        "main": "libs/config/src/index.ts",
         "tsConfig": "libs/config/tsconfig.lib.json",
-        "project": "libs/config/package.json",
-        "entryFile": "libs/config/src/index.ts",
-        "external": ["react/jsx-runtime"],
-        "rollupConfig": "@nrwl/react/plugins/bundle-rollup",
-        "compiler": "babel",
-        "assets": [
-          {
-            "glob": "libs/config/README.md",
-            "input": ".",
-            "output": "."
-          }
-        ]
+        "assets": ["libs/config/*.md"]
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/config/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": ["libs/config/**/*.ts"]
       }
     },
     "test": {
@@ -39,5 +28,6 @@
         "passWithNoTests": true
       }
     }
-  }
+  },
+  "tags": []
 }
